--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,15 @@
 {
   "manifest_version": 3,
   "name": "Schoology Dark Mode",
-  "description": "A dark mode theme for Schoology.",
   "version": "1.0",
-  "permissions": [
-    "activeTab",
-    "scripting"
-  ],
-  "background": {
-    "service_worker": "background.js"
-  },
+  "description": "A simple dark mode for Schoology.",
   "content_scripts": [
     {
       "matches": ["*://*.schoology.com/*"],
-      "js": ["content.js"],
-      "css": ["styles.css"]
+      "css": ["dark-mode.css"]
     }
   ],
-  "icons": {
-    "48": "icon.png"
-  }
+  "permissions": [
+    "activeTab"
+  ]
 }
